# OneShotNews

./: README.md
Back-End/prog2/: build.sh  pyproject.toml
Back-End/prog2/config/: settings.py
Back-End/prog2/news/: admin.py  urls.py
Back-End/prog2/news/migrations/: 0002_auto_20231107_1318.py
Back-End/prog2/users/: admin.py  views.py
Back-End/prog2/users/migrations/: 0003_alter_user_avatar.py
Backend/: my_settings.py  render.yaml
Backend/config/: urls.py
Backend/news/: models.py  serializer.py  views.py
Backend/users/: models.py  urls.py
Backend/users/migrations/: 0001_initial.py  0002_alter_user_avatar.py  0004_alter_user_avatar.py
CompetitionPresentation/: 본선 피피티.pptx
Crawling/: eng_crawl.cs  kor_crawl.cs
Crawling_Summarizing_Image/: csv_to_image.ipynb  eng_manipulation.ipynb  kor_manipulation.ipynb
DataPreprocessing/: kor_manipulation.ipynb
Frontend/: package-lock.json  package.json
Frontend/src/: index.tsx  router.tsx  theme.ts
Frontend/src/components/: EnNews.tsx  Header.tsx  LoginModal.tsx  News.tsx  NewsSkeleton.tsx  Root.tsx  SignUpModal.tsx  SocialLogin.tsx
Frontend/src/lib/: useUser.ts
Frontend/src/routes/: Home.tsx  KakaoConfrim.tsx  (+2 more)
MYSQL connector & SendMail/DBconnector/: connector  connectorToDB.cpp  result_eng.txt  result_kor.txt  temp
MYSQL connector & SendMail/SendMail/: SMTP.txt  SendMail  SendMail.cpp
TextToImage/: csv_to_image.ipynb
Website_Code/: clock.js  en_news.html  headerbar.css  login.css  login.html  main_page.html  news_part.css  pro2style.css  quote.js  reset2.css  select_lg.css  signup.html
